Modify setSchedule method