@@ -12,6 +12,7 @@ import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.server.ResponseStatusException;
 
+import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
@@ -103,14 +104,19 @@ public class SectionController {
     }
 
     @PutMapping("/{id}/setSchedule")
-    public SectionView setSchedule(@RequestBody List<Triple> schedule, @PathVariable Long id){
+    public SectionView setSchedule(@RequestBody List<String> schedule, @PathVariable Long id){
         Section section = sectionRepository.findById(id)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Section not found."));
         ExceptionList exceptionList = new ExceptionList();
         Set<PresentationSchedule> presentationScheduleSet = new HashSet<>();
-        for(Triple t: schedule){
+        for(String s: schedule){
+            List<String> parsed = Arrays.asList(s.split(" "));
+            if(parsed.size() != 3){
+                exceptionList.addNewException(new Exception("Wrong schedule format."));
+                continue;
+            }
             try{
-                presentationScheduleSet.add(new PresentationSchedule(t.getFirst(), t.getSecond(), t.getThird()));
+                presentationScheduleSet.add(new PresentationSchedule(parsed.get(0), parsed.get(1), parsed.get(2)));
             } catch (ExceptionList e){
                 exceptionList.addExceptions(e.getExceptions());
             }
